--- a/views/record.ejs
+++ b/views/record.ejs
@@ -3,13 +3,12 @@
 <head>
     <title>Crowd Sourcing Platform</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/layout.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 
 <body>
-    <header>
-        <a href="/">Crowd Sourcing Platform</a>
-    </header>
+    <%- include common/header.ejs %>
     <div class="container">
         <div class="d-flex j-center mt-5">
             <label class="fnt-2" id="currentSentenceLbl"></label>
@@ -17,14 +16,14 @@
             <label class="fnt-2" id="totalSentencesLbl"></label>
         </div>
     
-        <div class="d-flex j-center h-150">
-            <div class="col-6">
+        <div class="d-flex j-center">
+            <div class="col-8">
                 <div class="d-flex j-center">
                     <label class="fnt-2" id="sentenceLbl"></label>
                 </div>
             </div>
         </div>
-        <div class="d-flex j-center h-50">
+        <div class="d-flex j-center">
             <div class="col-3">
                 <div class="d-flex j-center">
                     <button id="startRecord" class="small-btn button1">Record</button>
@@ -45,27 +44,27 @@
     
         <div class="d-flex j-center">
             <div class="col-6">
-                <div class="d-flex j-center mt-5">
+                <div class="d-flex j-center">
                     <audio  id="player" controls></audio>
                 </div>
             </div>
         </div>
+        <div  id="controls" class="d-flex j-sa">
+            <!-- <button class="button2" disabled id="prevBtn">Previous</button> -->
+            <button class="button2" disabled id="nextBtn">Upload and Proceed</button>
+        </div>
     </div>
+    <%- include common/footer.ejs %>
 
-
-
-
-    <div  id="controls" class="d-flex j-sa">
-        <!-- <button class="button2" disabled id="prevBtn">Previous</button> -->
-        <button class="button2" disabled id="nextBtn">Upload and Proceed</button>
-    </div>
+   
 
 
     <script src="js/recorder.js"></script>
     <script>
-        window.sentences=[];
+        window.crowdSource = window.crowdSource || {};
+        crowdSource.sentences=[];
         <% sentences.forEach(function(sentence) { %>
-            window.sentences.push(" <%= sentence.sentence %>");
+            crowdSource.sentences.push(" <%= sentence.sentence %>");
         <% }); %>
     </script>
     <script src="js/record.js"></script>
