--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,6 +13,29 @@
     <%- include common/header.ejs %>
     <div class="container">
         <div class="d-flex j-center">
+            <div class="col-6 card p-1 fnt-1-5">
+                <h2 class="t-center">Instructions</h2>
+                <ul class="p-1">
+                    <li>
+                        Click Record to start, reading aloud only the sentence shown.
+                    </li>
+                    <li>
+                        When done speaking, click Stop.
+                    </li>
+                    <li>
+                        Review any recordings with warnings.
+                    </li>
+                </ul>
+                <div>
+                </div>
+                <div>
+                </div>
+                <div>
+
+                </div>
+            </div>
+        </div>
+        <div class="d-flex j-center">
             <div class="col-6 card">
                 <div class="d-flex j-center">
                     <h1>Speaker Characteristics</h1>
@@ -120,6 +143,7 @@
                 </div>
             </div>
         </div>
+       
     </div>
 
     <%- include common/footer.ejs %>
