--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -1,3 +1,18 @@
-<header class="d-flex">
-    <a href="/">Crowd Sourcing Platform</a>
-</header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Crowd Sourcing Platform</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="/about-us" class="nav-link">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a href="/contact-us" class="nav-link">Contact Us</a>
+            </li>
+        </ul>
+    </div>
+</nav>
