--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -5,6 +5,10 @@
     <title>Crowd Sourcing Platform</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
+        type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 
@@ -13,26 +17,30 @@
     <%- include common/header.ejs %>
     <div class="container">
         <section class="bg-yellow color-blue">
-            
-                <div class="d-flex j-center">
-                    <div class="col-6">
-                        <div class="d-flex t-center fnt-3">
-                            <h3>
-                                Access to learning opportunities 
-                                for every child
-                            </h3>      
-                        </div>
-                       
-                    </div>   
-                   
+
+            <div class="d-flex j-center">
+                <div class="col-6">
+                    <div class="d-flex t-center fnt-3">
+                        <h3>
+                            Access to learning opportunities
+                            for every child
+                        </h3>
+                    </div>
+
                 </div>
-                <div class="d-flex j-center">
-                    <div class="col-8">
-                        <div class="d-flex j-center fnt-2">
-                            <p>The lack of access to learning opportunities is a complex and multidimensional problem. It impacts the lives of millions of children on a daily basis. In response, Nandan Nilekani, Rohini Nilekani and Shankar Maruwada co-founded EkStep, a not-for-profit initiative to gather partners on a universal, collaborative platform to reimagine learning opportunities for every child.</p>
-                        </div>
-                    </div>    
+
+            </div>
+            <div class="d-flex j-center">
+                <div class="col-8">
+                    <div class="d-flex j-center fnt-2">
+                        <p>The lack of access to learning opportunities is a complex and multidimensional problem. It
+                            impacts the lives of millions of children on a daily basis. In response, Nandan Nilekani,
+                            Rohini Nilekani and Shankar Maruwada co-founded EkStep, a not-for-profit initiative to
+                            gather partners on a universal, collaborative platform to reimagine learning opportunities
+                            for every child.</p>
+                    </div>
                 </div>
+            </div>
         </section>
     </div>
     <%- include common/footer.ejs %>
