--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -1,32 +1,28 @@
-<footer>
-    <div class="d-flex">
-        <div class="col-6 ml-1">
-            <h3>
-                EkStep Foundation
-            </h3>
-            <label>
-                Copyright © 2019 EkStep Foundation . All Rights Reserved
-            </label>
+<footer class="fixed-bottom bg-light py-4 border-top">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <p class="text-muted">&copy; Ek Step Foundation 2020. All Rights Reserved.</p>
         </div>
-        <div class="col-3">
-            <ul>
-                <li class="mb-1">
-                    <a href="/contact-us">Contact Us</a>
-                </li>
-                <li>
-                    <a href="/about-us">About Us</a>
-                </li>
+        <div class="col-lg-6">
+            <ul class="list-inline mb-2">
+              <li class="list-inline-item">
+                <a href="/about-us">About Us</a>
+              </li>
+              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item">
+                <a href="/contact-us">Contact Us</a>
+              </li>
+              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item">
+                  <a href="/terms-and-conditions">Terms & Conditions</a>
+              </li>
+              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item">
+                  <a href="/privacy-policy">Privacy Policy</a>
+              </li>
             </ul>
-        </div>
-        <div class="col-3">
-            <ul>
-                <li class="mb-1">
-                    <a href="/privacy-policy">Privacy Policy</a>
-                </li>
-                <li>
-                    <a href="/terms-and-conditions">Terms & Conditions</a>
-                </li>
-            </ul>
-        </div>
+          </div>
+      </div>
     </div>
-</footer>
+  </footer>
